Prevent unnecessary scrollbar

--- a/content/static/custom.css
+++ b/content/static/custom.css
@@ -11,6 +11,11 @@ aside div img {
 aside nav ul li {
     text-transform: none;
 }
+main article header h1,
+main article header h2 {
+    margin: 0;
+    padding-top: 0.83em;
+}
 article > div {
     display: flex;
     flex-flow: row wrap;
